--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -65,12 +65,12 @@
     .tuition-page,
     .subjects-page,
     .single-subject,
-    .resorces-page,
+    .resources-page,
     .about-page,
     .contact-page,
     .policy-page {
       h1 {
-        font-size: initial;
+        font-size: 28px;
       }
 
       p {
