--- a/src/components/Cards/work-card/index.scss
+++ b/src/components/Cards/work-card/index.scss
@@ -1,4 +1,4 @@
-.card-container {
+.work-card-container {
   display: flex;
   justify-content: space-evenly;
   gap: 50px;
@@ -54,8 +54,9 @@
 }
 
 @media screen and (max-width: 920px) {
-  .card-container {
+  .work-card-container {
     align-items: center;
+    flex-direction: column;
     gap: 20px;
 
     .card-image {
