--- a/src/components/pages/Contact/index.scss
+++ b/src/components/pages/Contact/index.scss
@@ -1,7 +1,6 @@
 .contact-page {
   display: flex;
   justify-content: space-between;
-  padding-top: 0rem;
   background: var(--primary);
 
   .text-box {
@@ -17,7 +16,7 @@
   .call-button {
     color: #000;
     background: var(--oposite);
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: 3px;
     text-decoration: none;
     text-transform: uppercase;
@@ -53,7 +52,7 @@
       border: 0;
       background: var(--secondary);
       height: 50px;
-      font-size: 18px;
+      font-size: 16px;
       color: #000;
       padding: 20px;
       box-sizing: border-box;
@@ -69,7 +68,7 @@
       border: 0;
       background: var(--secondary);
       height: 50px;
-      font-size: 18px;
+      font-size: 16px;
       padding: 20px;
       min-height: 100px;
       box-sizing: border-box;
@@ -83,7 +82,7 @@
     .flat-button {
       color: #000;
       background: var(--button-default);
-      font-size: 18px;
+      font-size: 16px;
       letter-spacing: 3px;
       text-decoration: none;
       text-transform: uppercase;
@@ -142,15 +141,21 @@
 @media screen and (max-width: 800px) {
   .contact-page {
     flex-direction: column;
-    margin: 0rem;
 
     .text-box {
-      margin-top: 6rem;
-      margin-bottom: 4rem;
       width: 100%;
-      padding: 2rem;
+      margin: 0rem;
+      padding: 0 2rem;
     }
 
+    .call-button {
+      font-size: 12px;
+    }
+    .contact-form {
+      .flat-button {
+        font-size: 12px;
+      }
+    }
     .info-map {
       display: none;
     }
@@ -159,7 +164,7 @@
   .map-wrap {
     float: none;
     width: 100%;
-    height: 600px;
+    height: 300px;
     padding-top: 0;
   }
 }
