--- a/src/components/layout/navbar/index.scss
+++ b/src/components/layout/navbar/index.scss
@@ -6,7 +6,7 @@ header {
   width: 100%;
   letter-spacing: 3px;
   margin: 0;
-  padding: 1rem;
+  padding: 0rem 1rem;
   font-family: "Coolvetica";
   transition: all 0.3s;
   cursor: pointer;
@@ -27,7 +27,8 @@ header {
   }
 
   .logo {
-    width: 150px;
+    width: 200px;
+    height: 100px;
     border-radius: 10px;
   }
 
