--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -2,7 +2,7 @@
   position: relative;
   will-change: contents;
   transform-style: preserve-3d;
-  background-image: url("../../assets/images/background.webp");
+  background-image: url("../../assets/images/background.png");
   background-repeat: none;
   background-position-x: center;
   background-attachment: fixed;
