--- a/src/components/layout/navbar/index.scss
+++ b/src/components/layout/navbar/index.scss
@@ -29,7 +29,6 @@ header {
   .logo {
     width: 200px;
     height: 100px;
-    border-radius: 10px;
   }
 
   nav {
@@ -62,9 +61,8 @@ header {
     padding: 0.5rem;
 
     .logo {
-      display: block;
-      margin-top: 0px;
-      width: 75px;
+      width: 100px;
+      height: 50px;
     }
 
     nav {
