[Refactored] mobileview hight changed

--- a/src/components/pages/Home/index.scss
+++ b/src/components/pages/Home/index.scss
@@ -183,7 +183,7 @@
     .hero {
       background-image: none;
       box-shadow: none;
-      height: 70vh;
+      height: 60svh;
 
       .text-container {
         top: 3%;
