--- a/src/components/CTA/index.scss
+++ b/src/components/CTA/index.scss
@@ -30,7 +30,29 @@
   }
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 1050px) {
+  .call-to-action {
+    align-items: center;
+    margin: 2rem 0;
+
+    .text-container {
+      .cta-title {
+        padding: 0rem 4rem;
+        font-size: 24px;
+      }
+    }
+
+    .btn-container {
+      padding: 0 3rem;
+    }
+
+    button {
+      width: 200px;
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
   .call-to-action {
     flex-direction: column;
     align-items: center;
