--- a/src/components/pages/Contact/index.scss
+++ b/src/components/pages/Contact/index.scss
@@ -81,7 +81,7 @@
 
     .flat-button {
       color: #000;
-      background: var(--button-default);
+      background: var(--oposite);
       font-size: 16px;
       letter-spacing: 3px;
       text-decoration: none;
@@ -138,7 +138,7 @@
   height: 100%;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1050px) {
   .contact-page {
     flex-direction: column;
 
@@ -164,7 +164,6 @@
   .map-wrap {
     float: none;
     width: 100%;
-    height: 300px;
-    padding-top: 0;
+    height: 520px;
   }
 }
